# apps/backend/cmd/docs/swagger.json
@@ -75,7 +75,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.VerifyEmailDto"
+                            "$ref": "#/definitions/service.VerifyEmailDto"
                         }
                     }
                 ],
@@ -122,7 +122,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.LoginDto"
+                            "$ref": "#/definitions/service.LoginDto"
                         }
                     }
                 ],
@@ -211,7 +211,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.UserRegisterDto"
+                            "$ref": "#/definitions/service.UserRegisterDto"
                         }
                     }
                 ],
@@ -306,7 +306,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.CreateTeamDto"
+                            "$ref": "#/definitions/service.CreateTeamDto"
                         }
                     }
                 ],
@@ -615,7 +615,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.AcceptTeamMemberDto"
+                            "$ref": "#/definitions/service.AcceptTeamMemberDto"
                         }
                     }
                 ],
@@ -713,7 +713,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.UpdateMemberRoleDto"
+                            "$ref": "#/definitions/service.UpdateMemberRoleDto"
                         }
                     },
                     {
@@ -836,7 +836,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.CreateTeamPendingTeamMemberDto"
+                            "$ref": "#/definitions/service.CreateTeamPendingTeamMemberDto"
                         }
                     },
                     {
@@ -2271,107 +2271,6 @@
                 }
             }
         },
-        "dto.AcceptTeamMemberDto": {
-            "type": "object",
-            "properties": {
-                "role_id": {
-                    "type": "integer"
-                },
-                "user_id": {
-                    "type": "integer"
-                }
-            }
-        },
-        "dto.CreateTeamDto": {
-            "type": "object",
-            "properties": {
-                "address": {
-                    "type": "string"
-                },
-                "description": {
-                    "type": "string"
-                },
-                "email": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "phone": {
-                    "type": "string"
-                },
-                "username": {
-                    "type": "string"
-                }
-            }
-        },
-        "dto.CreateTeamPendingTeamMemberDto": {
-            "type": "object",
-            "properties": {
-                "username": {
-                    "type": "string"
-                }
-            }
-        },
-        "dto.LoginDto": {
-            "type": "object",
-            "required": [
-                "password",
-                "username"
-            ],
-            "properties": {
-                "password": {
-                    "type": "string",
-                    "minLength": 8
-                },
-                "username": {
-                    "type": "string"
-                }
-            }
-        },
-        "dto.UpdateMemberRoleDto": {
-            "type": "object",
-            "properties": {
-                "role_id": {
-                    "type": "integer"
-                },
-                "user_id": {
-                    "type": "integer"
-                }
-            }
-        },
-        "dto.UserRegisterDto": {
-            "type": "object",
-            "required": [
-                "email",
-                "full_name",
-                "password",
-                "username"
-            ],
-            "properties": {
-                "email": {
-                    "type": "string"
-                },
-                "full_name": {
-                    "type": "string"
-                },
-                "password": {
-                    "type": "string",
-                    "minLength": 8
-                },
-                "username": {
-                    "type": "string"
-                }
-            }
-        },
-        "dto.VerifyEmailDto": {
-            "type": "object",
-            "properties": {
-                "token": {
-                    "type": "string"
-                }
-            }
-        },
         "helpers.Pagination": {
             "type": "object",
             "properties": {
@@ -2391,6 +2290,17 @@
                     "type": "integer"
                 },
                 "total_page": {
+                    "type": "integer"
+                }
+            }
+        },
+        "service.AcceptTeamMemberDto": {
+            "type": "object",
+            "properties": {
+                "role_id": {
+                    "type": "integer"
+                },
+                "user_id": {
                     "type": "integer"
                 }
             }
@@ -2449,6 +2359,37 @@
                     "type": "number"
                 },
                 "uom": {
+                    "type": "string"
+                }
+            }
+        },
+        "service.CreateTeamDto": {
+            "type": "object",
+            "properties": {
+                "address": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "phone": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "service.CreateTeamPendingTeamMemberDto": {
+            "type": "object",
+            "properties": {
+                "username": {
                     "type": "string"
                 }
             }
@@ -2514,6 +2455,22 @@
                 },
                 "width": {
                     "type": "integer"
+                }
+            }
+        },
+        "service.LoginDto": {
+            "type": "object",
+            "required": [
+                "password",
+                "username"
+            ],
+            "properties": {
+                "password": {
+                    "type": "string",
+                    "minLength": 8
+                },
+                "username": {
+                    "type": "string"
                 }
             }
         },
@@ -2745,6 +2702,17 @@
                 }
             }
         },
+        "service.UpdateMemberRoleDto": {
+            "type": "object",
+            "properties": {
+                "role_id": {
+                    "type": "integer"
+                },
+                "user_id": {
+                    "type": "integer"
+                }
+            }
+        },
         "service.UpdateProductCategoryRequest": {
             "type": "object",
             "required": [
@@ -2812,6 +2780,30 @@
                 }
             }
         },
+        "service.UserRegisterDto": {
+            "type": "object",
+            "required": [
+                "email",
+                "full_name",
+                "password",
+                "username"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "full_name": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string",
+                    "minLength": 8
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
         "service.UserResponse": {
             "type": "object",
             "properties": {
@@ -2846,6 +2838,14 @@
                     "type": "string"
                 },
                 "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "service.VerifyEmailDto": {
+            "type": "object",
+            "properties": {
+                "token": {
                     "type": "string"
                 }
             }
